--- a/style.css
+++ b/style.css
@@ -26,11 +26,12 @@ small{
   color:red;
 }
 
-.loveMe{
+.love-me{
   height: 440px;
   width: 300px;
    background: url('https://images.unsplash.com/photo-1504215680853-026ed2a45def?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80')
-    no-repeat center center/cover;  margin: auto;
+    no-repeat center center/cover;  
+  margin: auto;
   cursor: pointer;
   max-width: 100%;
   position: relative;
@@ -38,7 +39,7 @@ small{
   overflow: hidden;
 }
 
-.loveMe .fa-heart {
+.love-me .fa-heart {
   position: absolute;
   animation: grow 0.6s linear;
   transform: translate(-50%, -50%) scale(0);
